--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,60 @@
 
+@Article{	  gallego2022renormalization,
+  author	= {Gallego, {\'A}ngel J. and Or{\'u}s, Rom{\'a}n},
+  journal	= {SN Computer Science},
+  number	= {2},
+  title		= {Language Design as Information Renormalization},
+  volume	= {3},
+  year		= {2022}
+}
+
+@Article{	  mckenzie2022incorporation,
+  author	= {McKenzie, Andrew},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {2},
+  pages		= {505--540},
+  title		= {Mediating functions and the semantics of noun
+		  incorporation},
+  volume	= {40},
+  year		= {2022}
+}
+
+@Article{	  martinovic2022specificational,
+  author	= {Martinovi{\'c}, Martina},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Reversibility in specificational copular sentences and
+		  pseudoclefts},
+  year		= {2022}
+}
+
+@Article{	  johnson2022evidence,
+  author	= {Johnson, Kimberly},
+  journal	= {Natural Language Semantics},
+  title		= {Time and evidence in the graded tense system of Mvskoke
+		  (Creek)},
+  year		= {2022}
+}
+
+@Article{	  bossi2022pronouns,
+  author	= {Bossi, Madeline},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {2},
+  pages		= {425--445},
+  title		= {N-effects are not-P-effects},
+  volume	= {40},
+  year		= {2022}
+}
+
+@Article{	  alkhalaf2022conjunct,
+  author	= {Al Khalaf, Eman},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {2},
+  pages		= {345--391},
+  title		= {Furthest conjunct agreement in Jordanian Arabic},
+  volume	= {40},
+  year		= {2022}
+}
+
 @Article{	  geist2010,
   author	= {Geist, Ljudmila},
   journal	= {Russian Linguistics},
@@ -37015,7 +37071,7 @@
 
 @PhDThesis{	  mckenzie2012the-role-of-contextu,
   address	= {Ann Arbor, United States},
-  author	= {{McKenzie}, Andrew Robert},
+  author	= {McKenzie, Andrew},
   type		= {{Ph.D.}},
   title		= {The role of contextual restriction in reference-tracking},
   year		= {2012}
