--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,49 @@
 
+@Article{	  barbaud1976superlative,
+  author	= {Barbaud, Philippe},
+  journal	= {Linguistic Analysis},
+  pages		= {125--174},
+  title		= {Constructions superlatives et structures apparent{\'e}es},
+  volume	= {2},
+  year		= {1976}
+}
+
+@Article{	  stetie2022,
+  author	= {Stetie, Noelia Ayel{\'e}n and Zunino, Gabriela Mariel},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Non-binary language in Spanish? Comprehension of
+		  non-binary morphological forms: a psycholinguistic study},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Article{	  moia1992classes,
+  author	= {Moia, T{\'e}lmo},
+  journal	= {Cadernos de Semantica},
+  title		= {Sobre classes sem{\^a}nticas de adjectivos},
+  volume	= {7},
+  year		= {1992}
+}
+
+@Book{		  landau2010locative,
+  address	= {Cambridge, Mass},
+  author	= {Landau, Idan},
+  pages		= {165},
+  publisher	= {The MIT Press},
+  title		= {The Locative Syntax of Experiencers},
+  year		= {2010}
+}
+
+@Book{		  landau2021adjunct,
+  address	= {Cambridge, Mass.},
+  author	= {Landau, Idan},
+  pages		= {264},
+  publisher	= {MIT Press},
+  title		= {A Selectional Theory of Adjunct Control},
+  year		= {2021}
+}
+
 @Article{	  gallego2022renormalization,
   author	= {Gallego, {\'A}ngel J. and Or{\'u}s, Rom{\'a}n},
   journal	= {SN Computer Science},
