--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Book{		  hopcroft2007,
+  author	= {Hopcroft, John E. and Motwani, Rajeev and Ullman, Jeffrey
+		  D.},
+  pages		= {535},
+  publisher	= {Pearson},
+  title		= {Introduction to Automata Theory, Languages, and
+		  Computation},
+  year		= {2007}
+}
+
+@Book{		  tomalin2006,
+  author	= {Tomalin, Marcus},
+  pages		= {248},
+  publisher	= {Cambridge University Press},
+  title		= {Linguistics and the Formal Sciences: The Origins of
+		  Generative Grammar},
+  year		= {2006}
+}
+
 @Article{	  barbaud1976superlative,
   author	= {Barbaud, Philippe},
   journal	= {Linguistic Analysis},
