--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,25 @@
 
+@Article{	  grosu2022gifted,
+  author	= {Grosu, Alexander and Krifka, Manfred},
+  journal	= {Linguistics and Philosophy},
+  title		= {A note on the gifted mathematician that you claim to be},
+  year		= {2022}
+}
+
+@Article{	  lederman2022frege,
+  author	= {Lederman, Harvey},
+  journal	= {Linguistics and Philosophy},
+  title		= {Fregeanism, sententialism, and scope},
+  year		= {2022}
+}
+
+@Article{	  marti2022zero,
+  author	= {Mart{\'i}, Luisa},
+  journal	= {Natural Language Semantics},
+  title		= {Zero N: Number features and ⊥},
+  year		= {2022}
+}
+
 @Book{		  hopcroft2007,
   author	= {Hopcroft, John E. and Motwani, Rajeev and Ullman, Jeffrey
 		  D.},
