--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,39 @@
 
+@Article{	  adger2022representations,
+  author	= {Adger, David},
+  journal	= {Mind \& Language},
+  number	= {2},
+  pages		= {248--260},
+  title		= {What are linguistic representations},
+  volume	= {37},
+  year		= {2022}
+}
+
+@InCollection{	  thompson1989adjective,
+  address	= {Amsterdam},
+  author	= {Thompson, Sandra},
+  booktitle	= {Linguistic Categorization},
+  editor	= {Corrigan, Roberta and Eckman, Fred and Noonan, Michaek},
+  pages		= {245},
+  publisher	= {John Benjamins Publishing Company},
+  title		= {A discourse approach to the cross-linguistic category
+		  `Adjective'},
+  year		= {1989}
+}
+
+@Article{	  beavers2021states,
+  author	= {Beavers, John and Everdell, Michael and Jerro, Kyle and
+		  Kauhanen, Henri and Koontz-Garboden, Andrew and LeBovidge,
+		  Elise and Nichols, Stephen},
+  journal	= {Language},
+  number	= {3},
+  pages		= {439--484},
+  title		= {States and changes of state: A crosslinguistic study of
+		  the roots of verbal meaning},
+  volume	= {97},
+  year		= {2021}
+}
+
 @Article{	  grosu2022gifted,
   author	= {Grosu, Alexander and Krifka, Manfred},
   journal	= {Linguistics and Philosophy},
@@ -16,7 +51,7 @@
 @Article{	  marti2022zero,
   author	= {Mart{\'i}, Luisa},
   journal	= {Natural Language Semantics},
-  title		= {Zero N: Number features and ⊥},
+  title		= {Zero N: Number features and $\perp$},
   year		= {2022}
 }
 
