--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,5 +1,22 @@
 
-<<<<<<< HEAD
+@Book{		  pylyshyn1984computation,
+  address	= {Cambridge, Mass.},
+  author	= {Pylyshyn, Zenon W.},
+  pages		= {292},
+  publisher	= {MIT Press},
+  title		= {Computation and Cognition: Toward a Foundation for
+		  Cognitive Science},
+  year		= {1984}
+}
+
+@Book{		  rey2020representations,
+  address	= {Oxford},
+  author	= {Rey, Georges},
+  publisher	= {Oxford University Press},
+  title		= {Representation of Language},
+  year		= {2020}
+}
+
 @Article{	  adger2022representations,
   author	= {Adger, David},
   journal	= {Mind \& Language},
@@ -10,8 +27,6 @@
   year		= {2022}
 }
 
-=======
->>>>>>> 1c70f6a5065d723f055b4f884a510a5cd7a72c2b
 @InCollection{	  thompson1989adjective,
   address	= {Amsterdam},
   author	= {Thompson, Sandra},
