--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,77 @@
 
+@Article{	  wu2022why,
+  author	= {Wu, Danfeng},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {412--425},
+  title		= {Why *if or not but whether or not},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  philippova2022adposition,
+  author	= {Philippova, Tatiana},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {399--411},
+  title		= {Ambivalent Adpositions and ``P-Stranding'' in Russian},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  mondon2022breton,
+  author	= {Mondon, Jean-Fran{\c c}ois},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {371--397},
+  title		= {Breton Masculine Human Plurals, Locality, and
+		  Impoverishment},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  hein2022vp,
+  author	= {Hein, Johannes and Murphy, Andrew},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {337--370},
+  title		= {VP-Nominalization and the Final-over-Final Condition},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  maldonado2022person,
+  author	= {Maldonado, Mora and Culbertson, Jennifer},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {295--336},
+  title		= {Person of Interest: Experimental Investigations into the
+		  Learnability of Person Systems},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  bumford2022superlative,
+  author	= {Bumford, Dylan and Sharvit, Yael},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {255--293},
+  title		= {Negative Polarity Items in Definite Superlatives},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  biggs2022get,
+  author	= {Biggs, Alison and Embick, David},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {211--254},
+  title		= {On the Event-Structural Properties of the English
+		  Get-Passive},
+  volume	= {53},
+  year		= {2022}
+}
+
 @Book{		  pylyshyn1984computation,
   address	= {Cambridge, Mass.},
   author	= {Pylyshyn, Zenon W.},
