--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,5 +1,105 @@
 
-<<<<<<< HEAD
+@Article{	  stowell1982infinitives,
+  author	= {Stowell, Tim},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {561--570},
+  title		= {The Tense of Infinitives},
+  volume	= {13},
+  year		= {1982}
+}
+
+@Article{	  wu2022why,
+  author	= {Wu, Danfeng},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {412--425},
+  title		= {Why *if or not but whether or not},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  philippova2022adposition,
+  author	= {Philippova, Tatiana},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {399--411},
+  title		= {Ambivalent Adpositions and ``P-Stranding'' in Russian},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  mondon2022breton,
+  author	= {Mondon, Jean-Fran{\c c}ois},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {371--397},
+  title		= {Breton Masculine Human Plurals, Locality, and
+		  Impoverishment},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  hein2022vp,
+  author	= {Hein, Johannes and Murphy, Andrew},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {337--370},
+  title		= {VP-Nominalization and the Final-over-Final Condition},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  maldonado2022person,
+  author	= {Maldonado, Mora and Culbertson, Jennifer},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {295--336},
+  title		= {Person of Interest: Experimental Investigations into the
+		  Learnability of Person Systems},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  bumford2022superlative,
+  author	= {Bumford, Dylan and Sharvit, Yael},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {255--293},
+  title		= {Negative Polarity Items in Definite Superlatives},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Article{	  biggs2022get,
+  author	= {Biggs, Alison and Embick, David},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {211--254},
+  title		= {On the Event-Structural Properties of the English
+		  Get-Passive},
+  volume	= {53},
+  year		= {2022}
+}
+
+@Book{		  pylyshyn1984computation,
+  address	= {Cambridge, Mass.},
+  author	= {Pylyshyn, Zenon W.},
+  pages		= {292},
+  publisher	= {MIT Press},
+  title		= {Computation and Cognition: Toward a Foundation for
+		  Cognitive Science},
+  year		= {1984}
+}
+
+@Book{		  rey2020representations,
+  address	= {Oxford},
+  author	= {Rey, Georges},
+  publisher	= {Oxford University Press},
+  title		= {Representation of Language},
+  year		= {2020}
+}
+
 @Article{	  adger2022representations,
   author	= {Adger, David},
   journal	= {Mind \& Language},
@@ -10,8 +110,6 @@
   year		= {2022}
 }
 
-=======
->>>>>>> 1c70f6a5065d723f055b4f884a510a5cd7a72c2b
 @InCollection{	  thompson1989adjective,
   address	= {Amsterdam},
   author	= {Thompson, Sandra},
