--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@InCollection{	  frey2019topic,
+  author	= {Frey, Werner and Meinunger, Andr{\'e}},
+  booktitle	= {Architecture of Topic},
+  pages		= {95-138},
+  publisher	= {De Gruyter},
+  title		= {Topic Marking and Illocutionary Force},
+  year		= {2019}
+}
+
+@Article{	  krifka2019commitments,
+  author	= {Krifka, Manfred},
+  journal	= {Theoretical Linguistics},
+  number	= {1-2},
+  pages		= {73--91},
+  title		= {Commitments and beyond},
+  volume	= {45},
+  year		= {2019}
+}
+
 @Article{	  stowell1982infinitives,
   author	= {Stowell, Tim},
   journal	= {Linguistic Inquiry},
