--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,6 +1,20 @@
 
-<<<<<<< HEAD
-=======
+@Article{	  blumberg2022preferring,
+  author	= {Blumberg, Kyle},
+  journal	= {Linguistics and Philosophy},
+  title		= {On preferring},
+  year		= {2022}
+}
+
+@Book{		  alim2016racio,
+  editor	= {Alim, H. Samy and Rickford, John R. and Ball, Arnetha F.},
+  pages		= {362},
+  publisher	= {Oxford University Press},
+  title		= {Raciolinguistics: How Language Shapes Our Ideas about
+		  Race},
+  year		= {2016}
+}
+
 @InCollection{	  frey2019topic,
   author	= {Frey, Werner and Meinunger, Andr{\'e}},
   booktitle	= {Architecture of Topic},
@@ -30,7 +44,6 @@
   year		= {1982}
 }
 
->>>>>>> ef9964fcc54182174c5795243358f94327294799
 @Article{	  wu2022why,
   author	= {Wu, Danfeng},
   journal	= {Linguistic Inquiry},
