--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,148 @@
 
+@Article{	  hernanz1988predicativos,
+  author	= {Hernanz, Maria Llu{\"\i}sa},
+  journal	= {Estudi General},
+  pages		= {7--31},
+  title		= {En torno a la sintaxis y la sem{\'a}ntica de los
+		  complementos predicativos en espa{\~n}ol},
+  volume	= {8},
+  year		= {1988}
+}
+
+@Book{		  wetzels2020portuguese,
+  author	= {Wetzels, W. Leo and Menuzzi, Sergio and Costa, Jo{\~a}o},
+  pages		= {616},
+  publisher	= {John Wiley \& Sons},
+  title		= {The Handbook of Portuguese Linguistics},
+  year		= {2020}
+}
+
+@Article{	  campos1986indefinite,
+  author	= {Campos, H{\'e}ctor},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {354--359},
+  title		= {Indefinite Object Drop},
+  volume	= {17},
+  year		= {1986}
+}
+
+@Article{	  westergaard2014cues,
+  author	= {Westergaard, Marit},
+  journal	= {Linguistic Variation},
+  number	= {1},
+  pages		= {26--45},
+  title		= {Linguistic variation and micro-cues in first language
+		  acquisition},
+  volume	= {14},
+  year		= {2014}
+}
+
+@Article{	  collins2022scalar,
+  author	= {Collins, Chris},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Scalar Modifiers of Quantifier Phrases},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Article{	  leivada2022parameters,
+  author	= {Leivada, Evelina and Murphy, Elliot},
+  journal	= {Language Development Research},
+  number	= {1},
+  pages		= {105--138},
+  title		= {A demonstration of the uncomputability of parametric
+		  models of language acquisition and a biologically plausible
+		  alternative},
+  volume	= {2},
+  year		= {2022}
+}
+
+@InBook{	  varela2002active,
+  address	= {Somerville, MA},
+  author	= {Varela, Soledad},
+  booktitle	= {Structure, meaning and acquisition in Spanish},
+  editor	= {Lee, James},
+  pages		= {304-316},
+  publisher	= {Cascadilla Press},
+  title		= {Active or Subjective Adjectival-Participles in Spanish},
+  year		= {2002}
+}
+
+@Article{	  koike2003ligeros,
+  author	= {Koike, Kazumi},
+  journal	= {Moenia},
+  pages		= {9--20},
+  title		= {Sustantivos ligeros},
+  volume	= {9},
+  year		= {2003}
+}
+
+@Article{	  armstrong2019activos,
+  author	= {Armstrong, Grant},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  pages		= {1--37},
+  title		= {Spanish participios activos are adjectival antipassives},
+  volume	= {34},
+  year		= {2019}
+}
+
+@Article{	  irigoyen2016estar,
+  author	= {Irigoyen, Karen and Ortiz, Rosa Mar{\'i}a},
+  journal	= {Lenguas Modernas},
+  pages		= {47--61},
+  title		= {Estar + participio: deslindando la per{\'i}frasis de la
+		  atribuci{\'o}n en espa{\~n}ol},
+  volume	= {48},
+  year		= {2016}
+}
+
+@Article{	  bosque2007paradigmas,
+  author	= {Bosque, Ignacio},
+  journal	= {Pandora: revue d›etudes hispaniques},
+  pages		= {189--198},
+  title		= {Procesos de abstracci{\'o}n en los paradigmas l{\'e}xicos
+		  abiertos},
+  volume	= {7},
+  year		= {2007}
+}
+
+@Article{	  bosque2020nueva,
+  author	= {Bosque, Ignacio},
+  journal	= {Euskera},
+  number	= {2},
+  pages		= {283--310},
+  title		= {La Nueva gram{\'a}tica acad{\'e}mica. Estructura,
+		  contenidos y an{\'a}lisis de la variaci{\'o}n},
+  volume	= {65},
+  year		= {2020}
+}
+
+@InBook{	  bosque2019participios,
+  address	= {Lugo, Espa{\~n}a},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Lo que hablan las palabras. Esdios de lexicolog{\'i}a,
+		  lexicolograf{\'i}a y gram{\'a}tica en honor de Manual Alvar
+		  Ezquerra},
+  editor	= {Cazorla, M. C. and Garc{\'i}a Aranda, M. A. and Nu{\~n}o
+		  {\'A}lvarez, Manuel},
+  publisher	= {Axac},
+  title		= {¿Participios en el diccionario?},
+  year		= {2019}
+}
+
+@Article{	  bosque1983adjetivo,
+  author	= {Bosque, Ignacio},
+  journal	= {LEA: Ling{\"u}{\'i}stica Espa{\~n}ola Actual},
+  number	= {1},
+  pages		= {1--14},
+  title		= {El complemento del adjetivo},
+  volume	= {5},
+  year		= {1983}
+}
+
 @Article{	  blumberg2022preferring,
   author	= {Blumberg, Kyle},
   journal	= {Linguistics and Philosophy},
