--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@Article{	  rudolph2022appearance,
+  author	= {Rudolph, Rachel Etta},
+  journal	= {Linguistics and Philosophy},
+  title		= {Acquaintance and evidence in appearance language},
+  year		= {2022}
+}
+
+@Article{	  kennedy2022familiarity,
+  author	= {Kennedy, Christopher and Willer, Malte},
+  journal	= {Linguistics and Philosophy},
+  title		= {Familiarity inferences, subjective attitudes and
+		  counterstance contingency: towards a pragmatic theory of
+		  subjective meaning},
+  year		= {2022}
+}
+
+@Article{	  moltmann2010detached,
+  author	= {Moltmann, Friederike},
+  journal	= {Mind \& Language},
+  number	= {4},
+  pages		= {440--473},
+  title		= {Generalizing Detached Self-Reference and the Semantics of
+		  Generic One},
+  volume	= {25},
+  year		= {2010}
+}
+
 @Article{	  hernanz1988predicativos,
   author	= {Hernanz, Maria Llu{\"\i}sa},
   journal	= {Estudi General},
