--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  grano2022enough,
+  author	= {Grano, Thomas},
+  journal	= {Natural Language Semantics},
+  number	= {2},
+  pages		= {115--153},
+  title		= {Enough clauses, (non)finiteness, and modality},
+  volume	= {30},
+  year		= {2022}
+}
+
 @Article{	  rudolph2022appearance,
   author	= {Rudolph, Rachel Etta},
   journal	= {Linguistics and Philosophy},
