--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  berro2022imper,
+  author	= {Berro, Ane and Odria, Ane and Fern{\'a}ndez, Beatriz},
+  journal	= {Syntax},
+  title		= {Person matters in impersonality},
+  year		= {2022}
+}
+
+@Article{	  tsiakmakis2022expletive,
+  author	= {Tsiakmakis, Evripidis and Espinal, M.Teresa},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Expletiveness in grammar and beyond},
+  volume	= {7},
+  year		= {2022}
+}
+
+@InBook{	  bosque1988tacitos,
+  address	= {Salamanca},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Philologica. Homenaje a Antonio Llorente Maldonado},
+  pages		= {87-102},
+  publisher	= {Universi-dad de Salamanca},
+  title		= {Clases de sujetos t{\'a}citos},
+  year		= {1988}
+}
+
+@Article{	  fernandezserrano2022sub,
+  author	= {Fern{\'a}ndez Serrano, Irene},
+  journal	= {Revista Espa{\~n}ola de Ling{\"u}{\'i}stica},
+  number	= {52},
+  pages		= {97--134},
+  title		= {A trav{\'e}s de la subordinada: hiperconcordancia en
+		  contextos de dativo experimentante en espa{\~n}ol},
+  volume	= {1},
+  year		= {2022}
+}
+
 @Article{	  grano2022enough,
   author	= {Grano, Thomas},
   journal	= {Natural Language Semantics},
