--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Article{	  wiltschko2022comm,
+  author	= {Wiltschko, Martina},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Language is for thought and communication},
+  volume	= {7},
+  year		= {2022}
+}
+
+@Article{	  hopperdietzel2022serial,
+  author	= {Hopperdietzel, Jens},
+  journal	= {Glossa: a journal of general linguistics},
+  number	= {1},
+  title		= {Talmy's typology in serializing languages: Variations on a
+		  VP},
+  volume	= {7},
+  year		= {2022}
+}
+
 @Article{	  berro2022imper,
   author	= {Berro, Ane and Odria, Ane and Fern{\'a}ndez, Beatriz},
   journal	= {Syntax},
