--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,15 @@
 
+@InCollection{	  bosque2015rasgos,
+  address	= {Madrid},
+  author	= {Bosque, Ignacio},
+  booktitle	= {Perspectivas de sintaxis formal},
+  editor	= {Gallego, {\'A}ngel J.},
+  pages		= {309-387},
+  publisher	= {Akal},
+  title		= {Los rasgos gramaticales},
+  year		= {2015}
+}
+
 @Article{	  wiltschko2022comm,
   author	= {Wiltschko, Martina},
   journal	= {Glossa: a journal of general linguistics},
