--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Book{		  chung2004restriction,
+  address	= {Cambridge, Mass.},
+  author	= {Chung, Sandra and Ladusaw, William A.},
+  pages		= {173},
+  publisher	= {MIT Press},
+  title		= {Restriction and Saturation},
+  year		= {2004}
+}
+
 @InCollection{	  bosque2015rasgos,
   address	= {Madrid},
   author	= {Bosque, Ignacio},
