--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,28 @@
 
+@Book{		  miyagawa2022tree,
+  address	= {Cambridge, Mass},
+  author	= {Miyagawa, Shigeru},
+  publisher	= {The MIT Press},
+  title		= {Syntax in the treetops},
+  year		= {2022}
+}
+
+@Book{		  giannakidou2021truth,
+  author	= {Giannakidou, Anastasia and Mari, Alda},
+  pages		= {312},
+  title		= {Truth and Veridicality in Grammar and Thought: Mood,
+		  Modality, and Propositional Attitudes},
+  year		= {2021}
+}
+
+@Book{		  mari2013genericity,
+  editor	= {Mari, Alda and Beyssade, Claire and Del Prete, Fabio},
+  pages		= {439},
+  publisher	= {Oxford University Press},
+  title		= {Genericity},
+  year		= {2013}
+}
+
 @Book{		  chung2004restriction,
   address	= {Cambridge, Mass.},
   author	= {Chung, Sandra and Ladusaw, William A.},
