--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,23 @@
 
+@Book{		  miyagawa2017beyond,
+  address	= {Cambridge, Mass.},
+  author	= {Miyagawa, Shigeru},
+  pages		= {248},
+  publisher	= {The MIT Press},
+  title		= {Agreement Beyond Phi},
+  year		= {2017}
+}
+
+@Book{		  miyagawa2010why,
+  address	= {Cambridge, Mass.},
+  author	= {Miyagawa, Shigeru},
+  pages		= {182},
+  publisher	= {The MIT Press},
+  title		= {Why Agree? Why Move?: Unifying Agreement-based and
+		  Discourse-configurational Languages},
+  year		= {2010}
+}
+
 @Book{		  miyagawa2022tree,
   address	= {Cambridge, Mass},
   author	= {Miyagawa, Shigeru},
