--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  sereikaite2022impersonal,
+  author	= {{\v S}ereikait{\.e}, Milena},
+  journal	= {Syntax},
+  pages		= {188--241},
+  title		= {Impersonals, passives, and impersonal pronouns: Lessons
+		  from Lithuanian},
+  volume	= {25},
+  year		= {2022}
+}
+
 @Book{		  miyagawa2017beyond,
   address	= {Cambridge, Mass.},
   author	= {Miyagawa, Shigeru},
