--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,13 @@
 
+@Article{	  colonna2022present,
+  author	= {Colonna, Saveria and Laca, Brenda and L{\'o}pez, Leticia
+		  and Soares, Eduardo Correa},
+  journal	= {Glossa: a journal of general linguistics},
+  title		= {When the present lies in the past: [Present under Past] in
+		  subjunctive clauses in Uruguayan Spanish},
+  year		= {2022}
+}
+
 @Article{	  sereikaite2022impersonal,
   author	= {{\v S}ereikait{\.e}, Milena},
   journal	= {Syntax},
