--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,33 @@
 
+@Article{	  devismarquez2018genero,
+  author	= {Dev{\'i}s M{\'a}rquez, Pedro Pablo},
+  journal	= {Verbum. Analecta Neolatina},
+  number	= {1-2},
+  pages		= {271--298},
+  title		= {G{\'e}nero gramatical y lengua espa{\~n}ola},
+  volume	= {19},
+  year		= {2018}
+}
+
+@Article{	  devismarquez2021encubiertas,
+  author	= {Dev{\'i}s M{\'a}rquez, Pedro Pablo},
+  journal	= {Borealis -- An International Journal of Hispanic
+		  Linguistics},
+  number	= {1},
+  pages		= {163--199},
+  title		= {Sustantivos e interrogativas encubiertas en espa{\~n}ol},
+  volume	= {10},
+  year		= {2021}
+}
+
+@Book{		  fitch2010evolution,
+  author	= {Tecumesh Fitch, W.},
+  pages		= {610},
+  publisher	= {Cambridge University Press},
+  title		= {The Evolution of Language},
+  year		= {2010}
+}
+
 @Article{	  colonna2022present,
   author	= {Colonna, Saveria and Laca, Brenda and L{\'o}pez, Leticia
 		  and Soares, Eduardo Correa},
