--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,14 @@
 
+@Article{	  wiltschko2008number,
+  author	= {Wiltschko, Martina},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {3},
+  pages		= {639--694},
+  title		= {The syntax of non-inflectional plural marking},
+  volume	= {26},
+  year		= {2008}
+}
+
 @Article{	  devismarquez2018genero,
   author	= {Dev{\'i}s M{\'a}rquez, Pedro Pablo},
   journal	= {Verbum. Analecta Neolatina},
