--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,85 @@
 
+@InBook{	  dixon1982adjectives,
+  address	= {Berlin},
+  author	= {Dixon, Richard M. W.},
+  booktitle	= {Where have all the adjectives gone? And other essays in
+		  semantics and syntax},
+  editor	= {Dixon, Richard M. W.},
+  pages		= {19-80},
+  publisher	= {de Gruyter},
+  title		= {Where have all the adjectives gone?},
+  year		= {1982}
+}
+
+@InBook{	  demonte2011adjectives,
+  address	= {Berlin},
+  author	= {Demonte, Violeta},
+  booktitle	= {Semantics: An International Handbook of Natural Language
+		  Meaning},
+  editor	= {Maienborn, Claudia and Heusinger, Klaus von and Portner,
+		  Paul},
+  pages		= {1314-1340},
+  publisher	= {De Gruyter},
+  title		= {Adjectives},
+  year		= {2011}
+}
+
+@Article{	  gonzalez2009evidencialidad,
+  author	= {Gonz{\'a}lez, Carlos and Lima, Pablo},
+  journal	= {Revista Signos},
+  number	= {71},
+  pages		= {295.315},
+  title		= {Estrategias de expresi{\'o}n de la evidencialidad en la
+		  argumentaci{\'o}n oral en sala de clases},
+  volume	= {42},
+  year		= {2009}
+}
+
+@Article{	  barrajon2005impersonal,
+  author	= {Barraj{\'o}n, Elena},
+  journal	= {ELUA. Estudios de Ling{\"u}{\'i}stica Universidad de
+		  Alicante},
+  pages		= {47--64},
+  title		= {Un caso de impersonalidad sem{\'a}ntica: el uso de los
+		  llamados `singulares arbitrarios' en corpora orales},
+  volume	= {19},
+  year		= {2005}
+}
+
+@InBook{	  llorente1977impersonales,
+  address	= {Oviedo},
+  author	= {Llorente Maldonado de Guevara, Antonio},
+  booktitle	= {Estudios ofrecidos a Emilio Alarcos Llorach},
+  pages		= {107-125},
+  publisher	= {Universidad de Oviedo},
+  title		= {Las construcciones de car{\'a}cter impersonal en
+		  espa{\~n}ol},
+  year		= {1977}
+}
+
+@PhDThesis{	  maldonadosoto1992se,
+  address	= {San Diego},
+  author	= {Maldonado Soto, Ricardo},
+  school	= {University of California},
+  title		= {Middle voice: the case of Spanish se},
+  year		= {1992}
+}
+
+@Article{	  beavers2022middle,
+  author	= {Beavers, John and Udayana, I Nyoman},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Middle voice as generalized argument suppression},
+  year		= {2022}
+}
+
+@Article{	  gleim2022exponent,
+  author	= {Gleim, Daniel and M{\"u}ller, Gereon and Privizentseva,
+		  Mariia and Tebay, S{\"o}ren E.},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Reflexes of exponent movement in inflectional morphology},
+  year		= {2022}
+}
+
 @Article{	  wiltschko2008number,
   author	= {Wiltschko, Martina},
   journal	= {Natural Language \& Linguistic Theory},
