--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,46 @@
 
+@Article{	  moltmann2013propositions,
+  author	= {Moltmann, Friederike},
+  journal	= {Canadian Journal of Philosophy},
+  number	= {5-6},
+  pages		= {679--701},
+  title		= {Propositions, attitudinal objects, and the distinction
+		  between actions and products},
+  volume	= {43},
+  year		= {2013}
+}
+
+@InCollection{	  grimshaw1993obligatory,
+  author	= {Grimshaw, Jane and Vikner, Sten},
+  booktitle	= {Knowledge and language. Volume II. Lexical and Conceptual
+		  Structure},
+  editor	= {Reuland, Eric J. and Abraham, Werner},
+  pages		= {143-155},
+  publisher	= {Kluwer Academic Publishers},
+  title		= {Obligatory adjuncts and the structure of evensts},
+  year		= {1993}
+}
+
+@InCollection{	  moltmann2020abstract,
+  address	= {Cham},
+  author	= {Moltmann, Friederike},
+  booktitle	= {Abstract Objects},
+  editor	= {Falguera, J. L. and Mart{\'i}nez-Vida, C.},
+  pages		= {255-276},
+  publisher	= {Springer International Publishing},
+  title		= {Abstract Objects and the Core-Periphery Distinction in the
+		  Ontological and the Conceptual Domain of Natural Language},
+  year		= {2020}
+}
+
+@Book{		  rothmayr2009stative,
+  author	= {Rothmayr, Antonia},
+  pages		= {216},
+  publisher	= {John Benjamins Publishing},
+  title		= {The Structure of Stative Verbs},
+  year		= {2009}
+}
+
 @InBook{	  dixon1982adjectives,
   address	= {Berlin},
   author	= {Dixon, Richard M. W.},
