--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,31 @@
 
+@Book{		  hengeveld1992nonverbal,
+  address	= {Berlin; New York},
+  author	= {Hengeveld, Kees},
+  pages		= {321},
+  publisher	= {Mouton de Gruyter},
+  title		= {Non-verbal predication: theory, typology, diachrony},
+  volume	= {15},
+  year		= {1992}
+}
+
+@Book{		  anderson2009auxiliary,
+  address	= {Oxford},
+  author	= {Anderson, Gregory D. S.},
+  pages		= {473},
+  publisher	= {Oxford University Press},
+  title		= {Auxiliary verb constructions},
+  year		= {2009}
+}
+
+@Book{		  aikhenvald2018serial,
+  address	= {Oxford},
+  author	= {Aikhenvald, Alexandra Y.},
+  publisher	= {Oxford University Press},
+  title		= {Serial verbs},
+  year		= {2018}
+}
+
 @Article{	  moltmann2013propositions,
   author	= {Moltmann, Friederike},
   journal	= {Canadian Journal of Philosophy},
