--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,87 @@
 
+@Article{	  zyman2022proleptic,
+  author	= {Zyman, Erik},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  pages		= {129--158},
+  title		= {Proleptic PPs are arguments: consequences for the
+		  argument/adjunct distinction and for selectional switch},
+  volume	= {39},
+  year		= {2022}
+}
+
+@Article{	  ernst2022adjunct,
+  author	= {Ernst, Thomas},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  pages		= {85--128},
+  title		= {The adjunct condition and the nature of adjuncts},
+  volume	= {39},
+  year		= {2022}
+}
+
+@Article{	  epstein2016pair,
+  author	= {Epstein, Samuel D. and Kitahara, Hisatsugu and Seely,
+		  Daniel},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  title		= {Phase cancellation by external pair-merge of heads},
+  volume	= {33},
+  year		= {2016}
+}
+
+@Article{	  takita2016spell,
+  author	= {Takita, Kensuke and Goto, Nobu and Shibata, Yoshiyuki},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  title		= {Labeling through Spell-Out},
+  volume	= {33},
+  year		= {2016}
+}
+
+@Article{	  takita2020labeling,
+  author	= {Takita, Kensuke},
+  journal	= {The Linguistic Review},
+  number	= {1},
+  pages		= {75--116},
+  title		= {Labeling for linearization},
+  volume	= {37},
+  year		= {2020}
+}
+
+@Article{	  schutze1999infected,
+  author	= {Sch{\"u}tze, Carson T.},
+  journal	= {Linguistic Inquiry},
+  number	= {3},
+  pages		= {467--488},
+  title		= {English Expletive Constructions Are Not Infected},
+  volume	= {30},
+  year		= {1999}
+}
+
+@Article{	  sobin1997agreement,
+  author	= {Sobin, Nicholas},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {318--343},
+  title		= {Agreement, Default Rules, and Grammatical Viruses},
+  volume	= {28},
+  year		= {1997}
+}
+
+@InBook{	  demonte2002micro,
+  address	= {Osorno, Chile},
+  author	= {Demonte, Violeta},
+  booktitle	= {Texto, Ling{\"u}{\'i}stica y Cultura. Actas del XIV
+		  Congreso de la sociedad chilena de ling{\"u}{\'i}stica},
+  editor	= {{\'A}lvarez, P. and Rosas, M. and Contreras, M.},
+  pages		= {9-40},
+  publisher	= {Editorial Universidad de Los Lasgos},
+  title		= {Microvariaci{\'o}n sint{\'a}ctica en espa{\~n}ol. Rasgos,
+		  categor{\'i}as y virus},
+  year		= {2002}
+}
+
 @Book{		  hengeveld1992nonverbal,
   address	= {Berlin; New York},
   author	= {Hengeveld, Kees},
