--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,62 @@
 
+@Book{		  uriagereka2018bio,
+  address	= {New York, NY},
+  author	= {Uriagereka, Juan},
+  pages		= {322},
+  publisher	= {Routledge},
+  title		= {Biolinguistic investigations and the formal language
+		  hierarchy},
+  year		= {2018}
+}
+
+@Book{		  lohndal2018formal,
+  address	= {New York, NY},
+  author	= {Lohndal, Terje},
+  pages		= {x, 448 pages},
+  publisher	= {Routledge},
+  title		= {Formal grammar: theory and variation across English and
+		  Norwegian},
+  year		= {2018}
+}
+
+@Book{		  disciullo2011bio,
+  address	= {Oxford; New York},
+  editor	= {Di Sciullo, Anne-Marie and Boeckx, Cedric},
+  pages		= {543},
+  publisher	= {Oxford University Press},
+  title		= {The biolinguistic enterprise: new perspectives on the
+		  evolution and nature of the human language faculty},
+  year		= {2011}
+}
+
+@Book{		  gelderen2018verb,
+  address	= {New York, NY},
+  author	= {van Gelderen, Elly},
+  pages		= {293},
+  publisher	= {Routledge},
+  title		= {The diachrony of verb meaning: aspect and argument
+		  structure},
+  year		= {2018}
+}
+
+@Book{		  gumiel2005predicativos,
+  address	= {Madrid},
+  author	= {Gumiel-Molina, Silvia},
+  pages		= {91},
+  publisher	= {Arco/Libros},
+  title		= {Los complementos predicativos},
+  year		= {2005}
+}
+
+@Book{		  gumiel2008secundaria,
+  address	= {Alcal{\'a} de Henares},
+  author	= {Gumiel-Molina, Silvia},
+  pages		= {312},
+  publisher	= {Universidad de Alcal{\'a} de Henares},
+  title		= {Estructura argumental y predicaci{\'o}n secundaria},
+  year		= {2008}
+}
+
 @Article{	  zyman2022proleptic,
   author	= {Zyman, Erik},
   journal	= {The Linguistic Review},
