--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,41 @@
 
+@Article{	  potts2002as,
+  author	= {Potts, Christopher},
+  journal	= {Natural Language \& Linguistic Theory},
+  number	= {3},
+  pages		= {623--689},
+  title		= {The syntax and semantics of as-parentheticals},
+  volume	= {20},
+  year		= {2002}
+}
+
+@Article{	  ippolito2022future,
+  author	= {Ippolito, Michela and Farkas, Donka F.},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {943--984},
+  title		= {Assessing alternatives: the case of the presumptive future
+		  in Italian},
+  volume	= {45},
+  year		= {2022}
+}
+
+@Article{	  carter2022force,
+  author	= {Carter, Sam},
+  journal	= {Linguistics and Philosophy},
+  number	= {4},
+  pages		= {873--910},
+  title		= {Force and Choice},
+  volume	= {45},
+  year		= {2022}
+}
+
+@Article{	  bosque2022ers,
+  author	= {Bosque, Ignacio},
+  title		= {Event-related states in secondary predication},
+  year		= {2022}
+}
+
 @Book{		  uriagereka2018bio,
   address	= {New York, NY},
   author	= {Uriagereka, Juan},
