--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,11 @@
 
+@Article{	  gluckman2022nouns,
+  author	= {Gluckman, John},
+  journal	= {Natural Language \& Linguistic Theory},
+  title		= {Perspectival domains in nouns and clauses},
+  year		= {2022}
+}
+
 @Article{	  potts2002as,
   author	= {Potts, Christopher},
   journal	= {Natural Language \& Linguistic Theory},
