--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,76 @@
 
+@Book{		  karimi2007phrasal,
+  editor	= {Karimi, Simin and Samiian, Vida and Wilkins, Wendy},
+  pages		= {423},
+  publisher	= {John Benjamins Publishing},
+  title		= {Phrasal and Clausal Architecture: Syntactic Derivation and
+		  Interpretation : in Honor of Joseph E. Emonds},
+  year		= {2007}
+}
+
+@Book{		  evans2016insubordination,
+  editor	= {Evans, Nicholas and Watanabe, Honor{\'e}},
+  publisher	= {John Benjamins Publishing},
+  title		= {Insubordination},
+  year		= {2016}
+}
+
+@Book{		  nikolaeva2007finite,
+  address	= {Oxford},
+  editor	= {Nikolaeva, Irina},
+  pages		= {537},
+  publisher	= {Oxford University Press},
+  title		= {Finiteness: Theoretical and Empirical Foundations},
+  year		= {2007}
+}
+
+@Article{	  iatridou1997pro,
+  author	= {Iatridou, Sabine and Embick, David},
+  journal	= {Language},
+  number	= {1},
+  pages		= {58--78},
+  title		= {Apropos pro},
+  volume	= {73},
+  year		= {1997}
+}
+
+@Article{	  hintikka1986certain,
+  author	= {Hintikka, Jaakko},
+  journal	= {Linguistic Inquiry},
+  number	= {2},
+  pages		= {331--336},
+  title		= {The Semantics of A Certain},
+  volume	= {17},
+  year		= {1986}
+}
+
+@Article{	  safir2004person,
+  author	= {Safir, Ken},
+  journal	= {Italian Journal of Linguistics},
+  number	= {1},
+  pages		= {107--153},
+  title		= {Person, context and perspective},
+  volume	= {16},
+  year		= {2004}
+}
+
+@Article{	  gutierrez2015evidential,
+  author	= {Guti{\'e}rrez, Anal{\'i}a},
+  journal	= {Anthropological Linguistics},
+  number	= {4},
+  pages		= {412--443},
+  title		= {Evidential Determiners in Niva{\^c}le},
+  volume	= {57},
+  year		= {2015}
+}
+
+@Article{	  peters2022exceptive,
+  author	= {Peters, Stanley and Westerst{\aa}hl, Dag},
+  journal	= {Linguistics and Philosophy},
+  title		= {The semantics of exceptives},
+  year		= {2022}
+}
+
 @Article{	  gluckman2022nouns,
   author	= {Gluckman, John},
   journal	= {Natural Language \& Linguistic Theory},
