--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,44 @@
 
+@InBook{	  matthewson2012evidence,
+  address	= {Berlin},
+  author	= {Matthewson, Lisa},
+  booktitle	= {Empirical approaches to linguistic theory: Studies of
+		  meaning and structure},
+  editor	= {Stolterfoht, Britta and Featherston, Brian},
+  publisher	= {Mouton de Gruyter},
+  title		= {Evidence about evidentials: Where fieldwork meets theory},
+  year		= {2012}
+}
+
+@Book{		  stollerfoht2012empirical,
+  address	= {Berlin},
+  editor	= {Stolterfoht, Britta and Featherston, Brian},
+  publisher	= {Mouton de Gruyter},
+  title		= {Empirical approaches to linguistic theory: Studies of
+		  meaning and structure},
+  year		= {2012}
+}
+
+@InBook{	  pesetsky2001t-c,
+  address	= {Cambridge, Mass},
+  author	= {Pesetsky, David and Torrego, Esther},
+  booktitle	= {Ken Hale: a life in language},
+  editor	= {Hale, Kenneth L. and Kenstowicz, Michael J.},
+  pages		= {355-426},
+  publisher	= {MIT Press},
+  title		= {T-to-C movement: Causes and consequences},
+  year		= {2001}
+}
+
+@PhDThesis{	  blevins1990complexity,
+  address	= {Amherst},
+  author	= {Blevins, James P.},
+  school	= {University of Massachusetts at Amherst},
+  title		= {Syntactic Complexity: Evidence for Discontinuity and
+		  Multidomination},
+  year		= {1990}
+}
+
 @Book{		  karimi2007phrasal,
   editor	= {Karimi, Simin and Samiian, Vida and Wilkins, Wendy},
   pages		= {423},
