--- a/result-reduced.bib
+++ b/result-reduced.bib
@@ -1,4 +1,30 @@
 
+@Book{		  culicover1984locality,
+  address	= {NY},
+  author	= {Culicover, Peter and Wilkins, Wendy},
+  publisher	= {Academic Press},
+  title		= {Locality in linguistic theory},
+  year		= {1984}
+}
+
+@Article{	  graffi1997frasi,
+  author	= {Graffi, Giorgio and Graffi, Giorgio},
+  journal	= {Lingua e Stile},
+  number	= {2/1997},
+  title		= {Frasi «complete» e frasi «ridotte». Recenti proposte
+		  di analisi},
+  year		= {1997}
+}
+
+@Book{		  graffi2001200,
+  address	= {London},
+  author	= {Graffi, Giorgio},
+  pages		= {551},
+  publisher	= {John Benjamins Publishing},
+  title		= {200 Years of Syntax: A Critical Survey},
+  year		= {2001}
+}
+
 @InBook{	  matthewson2012evidence,
   address	= {Berlin},
   author	= {Matthewson, Lisa},
